Update banner content

--- a/index.html
+++ b/index.html
@@ -30,10 +30,27 @@
     </header>
     <section>
       <div id="landing-left">
-        <h2>
-          Find your rhythm with the world's largest
-          <span> community of drummers.</span>
-        </h2>
+        <h2>A thriving community beating to the same <span>rhythm.</span></h2>
+        <h3>
+          Join our vibrant community and embark on an exhilarating journey to
+          master the art of drumming. Whether you're a complete novice or an
+          experienced percussionist, our platform offers a wealth of resources,
+          expert guidance, and a supportive network to fuel your passion.
+        </h3>
+        <div id="landing-callouts">
+          <div>
+            <h3 class="callout-numbers">100k+</h3>
+            <h3>Members</h3>
+          </div>
+          <div>
+            <h3 class="callout-numbers">300+</h3>
+            <h3>Courses</h3>
+          </div>
+          <div>
+            <h3 class="callout-numbers">50+</h3>
+            <h3>Expert Mentors</h3>
+          </div>
+        </div>
       </div>
       <div id="landing-right">
         <div id="landing-image-backdrop"></div>
