Make landing image and backdrop responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
       <div id="landing-left">
         <h2>A thriving community beating to the same <span>rhythm.</span></h2>
-        <h3>
+        <h3 id="landing-text">
           Join our vibrant community and embark on an exhilarating journey to
           master the art of drumming. Whether you're a complete novice or an
           experienced percussionist, our platform offers a wealth of resources,
@@ -40,15 +40,15 @@
         <div id="landing-callouts">
           <div>
             <h3 class="callout-numbers">100k+</h3>
-            <h3>Members</h3>
+            <h3 class="callout-text">Members</h3>
           </div>
           <div>
             <h3 class="callout-numbers">300+</h3>
-            <h3>Courses</h3>
+            <h3 class="callout-text">Courses</h3>
           </div>
           <div>
             <h3 class="callout-numbers">50+</h3>
-            <h3>Expert Mentors</h3>
+            <h3 class="callout-text">Expert Mentors</h3>
           </div>
         </div>
       </div>
